# muscularpedia

./: Cargo.toml
locales/de-DE/: keys.ftl
locales/en-US/: keys.ftl
locales/fr-FR/: keys.ftl
locales/it-IT/: keys.ftl
src/: main.rs
src/i18n/: mod.rs
src/middlewares/: lang_middleware.rs  mod.rs
src/templates/: home.rs
static/: style.css
templates/: base.html  home.html
