[package]
name = "muscularpedia"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.1"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
tower-http = { version = "0.6", features = ["fs"] }